catgories feature setup
