# app/models/category.rb
@@ -1,0 +1,5 @@
+class Category < ApplicationRecord
+  include Ransackable
+
+  validates :name, presence: true, uniqueness: true
+end
